# sparse_latent_autoencoder_vae

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
project/: __main__.py
src/scratchbook/: __main__.py
src/sparse_vae/models/: models.py
src/sparse_vae/training/: dataset.py
