[project]
name = "python-project-template"
version = "1.0.0"
description = "A template for Python projects. Contains a basic project structure and setup. Includes uv, ruff, and pyrefly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/node_modules", "**/__pycache__", "**/*venv/**/*"]

[project.scripts]
start = "project.__main__:main"

[tool.uv]
package = true
